# dynamicdb-py

./: .gitattributes  README.md  setup.cfg  setup.py
src/: __init__.py  database.py  main.py
utils/: constants.py
