[metadata]
name = dynamicdb
version = 1.0.0
author = emptydev1
description = A JSON database made in Python simple and easy to use.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emptydev1/dynamicdb.py

[options]
packages = dynamicdb

[options.package_data]
dynamicdb = py.typed

[options.entry_points]
console_scripts =
    dynamicdb = dynamicdb.cli:main
